# convective-rs

./: .gitignore  Cargo.toml  README.md
convective-data/: Cargo.toml  README.md
convective-data/examples/: eg_datasets.rs
convective-data/src/: lib.rs
convective-data/src/datasets/: mod.rs
convective-data/src/datasets/types/: configs.rs  experiments.rs  features.rs  mod.rs  models.rs
convective-data/src/errors/: configs.rs  datasets.rs  mod.rs  persist.rs
convective-data/src/utils/: mod.rs  numeric.rs  time.rs
convective-graph/: Cargo.toml  README.md
convective-ml/: Cargo.toml  README.md
convective-ml/examples/: Cargo.toml  README.md
convective-ml/examples/distributed/case_1/: README.md  train.rs
convective-ml/examples/distributed/case_1/configs/: data.toml  models.toml  topology.toml
convective-ml/examples/distributed/case_3/: README.md  config.toml  train.rs
convective-ml/examples/distributed/case_3/configs/: data.toml  models.toml
convective-ml/examples/distributed/case_3/files/: case_3_ai_00_data.csv  case_3_am_00_data.csv  case_3_eu_00_data.csv  case_3_eu_00_ob.json
convective-ml/examples/distributed/templates/: test_temp_synth_00.toml  test_temp_train_00.toml  test_temp_train_01.toml
convective-ml/src/: lib.rs
convective-ml/src/features/: compute.rs  compute_market.rs  errors.rs  interface.rs  mod.rs  registry.rs  selector.rs
convective-ml/src/features/composite/: mod.rs
convective-ml/src/features/funding/: mod.rs
convective-ml/src/features/liquidations/: cex.rs  mod.rs
convective-ml/src/features/open_interest/: mod.rs
convective-ml/src/features/orderbook/: imbalance.rs  microprice.rs  mod.rs  price.rs  spread.rs  volume.rs
convective-ml/src/features/trades/: mod.rs
convective-ml/src/functions/: cost.rs  interface.rs  mod.rs
convective-ml/src/metrics/: interface.rs  mod.rs
convective-ml/src/metrics/class/: acc.rs
convective-ml/src/metrics/regress/: mod.rs  rmse.rs
convective-ml/src/metrics/templates/: mod.rs
convective-ml/src/models/: backend.rs  interface.rs  linear.rs  mod.rs
convective-ml/src/optimizers/: gradient.rs  mod.rs
convective-opers/: Cargo.toml  README.md
convective-quant/: Cargo.toml  README.md
convective-rs/: Cargo.toml  README.md
convective-synth/: Cargo.toml  README.md
datasets/: README.md
examples/: Cargo.toml
