[workspace]
resolver = "2"
members = [
  "convective-data",
  "convective-graph",
  "convective-ml",
  "convective-opers",
  "convective-quant",
  "convective-rs",
  "convective-synth",
  "examples",
]
default-members = [
  "convective-rs",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
description = ""
documentation = "https://docs.rs/convective-rs/"
homepage = "https://iteralabs.xyz/convective-rs"
repository = "https://github.com/iteralabs/convective-rs"
license = "Apache-2.0"
keywords = ["crypto", "framework", "machine-learning", "math", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
exclude = ["*.log", ".github", "Makefile.toml", "assets/*", "tags"]
include = ["katex-header.html"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
convective_data = { path = "./convective-data", version = "0.0.10" }
convective_graph = { path = "./convective-graph", version = "0.0.10" }
convective_ml = { path = "./convective-ml", version = "0.0.10" }
convective_opers = { path = "./convective-opers", version = "0.0.10" }
convective_quant = { path = "./convective-quant", version = "0.0.10" }
convective_synth = { path = "./convective-synth", version = "0.0.10" }
criterion = { version = "0.5", features = ["html_reports"] }
csv = { version = "1.3" }
futures = { version = "0.3" }
human_bytes = { version = "0.4.1" }
memuse = { version = "0.2.0" }
nalgebra = { version = "0.33" }
nalgebra-sparse = { version = "0.10" }
num-traits = { version = "0.2" }
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.34", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "1.0.64" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.8" }

[workspace.lints.rust]
dead_code = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)"] }
unreachable_code = "deny"
unreachable_patterns = "deny"
unsafe_code = "forbid"
unused_extern_crates = "allow"
unused_variables = "warn"
