[package]
name = "example"
version = "0.0.1"
edition = "2024"
rust-version = "1.85.0"
description = "Research and implementation examples for the convective-rs Framework"
documentation = "https://docs.rs/convective-rs/"
readme = "README.md"
homepage = "https://iteralabs.xyz/convective-rs"
repository = "https://github.com/iteralabs/convective-rs"
license = "Apache-2.0"
keywords = ["crypto", "framework", "machine-learning", "math", "trading"]
categories = ["data-structures", "development-tools", "finance", "simulation"]
exclude = ["*.log", ".github", "Makefile.toml", "assets/*", "tags"]
include = ["../katex-header.html", "Cargo.toml", "README.md", "src/**/*"]
publish = false

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]
private-doc = true
license = "Apache-2.0"

[[example]]
name = "basic"
path = "quickstart/basic.rs"

[dependencies]
anyhow = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
convective_data = { path = "../convective-data", version = "0.0.10" }
convective_synth = { path = "../convective-synth", version = "0.0.10" }
criterion = { version = "0.5", features = ["html_reports"] }
human_bytes = { version = "0.4.1" }
memuse = { version = "0.2.0" }
rand = { version = "0.9.0" }
rand_distr = { version = "0.5.0" }
tch = { version = "0.20.0", optional = true }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }

[lints.rust]
trivial_casts = "forbid"
trivial_numeric_casts = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(nightly)"] }
unreachable_code = "deny"
unreachable_patterns = "deny"
unsafe_code = "forbid"
unused_extern_crates = "allow"
unused_variables = "warn"
